<resources>
    <string name="app_name">GithubSubmit1</string>
    <string name="follower">Follower</string>
    <string name="github_username">Username</string>
    <string name="username">Blackmagic</string>
    <string name="his_own_name">Mochamad Rafli</string>
    <string name="company1">Cv.margacinta</string>
    <string name="city1">Bojongsoang - Bandung Jawa Barat</string>
    <string name="follower1">Follower: 1600</string>
    <string name="following1">Following: 16</string>
    <string name="repository">repository: 4</string>
    <string name="profile_pic">profile_pic</string>
    <string name="user_fullname">mYnameIsYou</string>
    <string name="following">Following</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">search</string>
    <string name="search_hint">Masukkan kata</string>
    <string name="dark_mode">Activate dark mode</string>
    <string name="menu1">Favorite</string>
    <string name="menu2">dark mode</string>
</resources>