<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:layout_gravity="center">

    <RelativeLayout
        android:id="@+id/user_card"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/roundstyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/user_profile_picture"
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:background="@drawable/roundstyle"
            android:contentDescription="@string/profile_pic"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/user_profile_picture"
            android:background="@drawable/roundstyle"
            android:orientation="vertical">

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:paddingLeft="16dp"
                android:paddingTop="12dp"
                android:paddingBottom="2dp"
                android:text="@string/github_username"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_html"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:text="@string/github_username"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/user_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:paddingStart="20dp"
                android:text="@string/company1" />

        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>